<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AllPageOfForget3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activity.ForgetPassword3">

    <TextView
        android:id="@+id/btnGoToLogin4"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/BacktoPageLogin"
        android:textColor="#9A9898"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.493"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnChangePasswordForget"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfirmPasswordLayoutForget"
        android:layout_alignStart="@+id/txtConfirmPasswordLayoutForget"
        android:layout_alignEnd="@+id/txtConfirmPasswordLayoutForget"
        android:layout_marginStart="56dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/roundedbuttonred"
        android:text="@string/save"
        android:textColor="#ffff" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/changepassword" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        android:textColor="#172B4D"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfirmPasswordLayoutForget"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPasswordLayoutForget"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/Confirmpassword"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="#172B4D"
        app:boxStrokeWidth="2dp"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmPwdForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLayoutForget"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text6"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="#172B4D"
        app:boxStrokeWidth="2dp"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPwdForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>